# teehee-chat-backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  chats.py  keys.py  messages.py  models.py  stream.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  database.py  models.py  schemas.py
app/services/: __init__.py  provider_clients.py
app/utils/: streaming.py
