[project]
name = "teehee-chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.13",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
